Fixing known issues:
- Small fixes after testing context menu accelerators on Mac. Also includes lint cleanup and docs generation.
- Fix navigation button spacing; original commit by @Sh1d0w bumped it from 4px to 14px.
  Besides fixing spacing, this also fixes the stretched out when hover issue.
- Windows now has a 5px margin to the left of navigator buttons
- Broke out accelerator formatting to a new file and added unit tests to
  ensure the logic is correct (glad I did- there were missing use-cases).
- Updated accelerator style in context menu to be the same size as the item itself
- Removed max-width of 300 for context menu (to prevent overflow)
- Updated font style/size for context menu (windows only)
- Fix the resize border problem
- Fix menu font face (windows)

--- a/less/contextMenu.less
+++ b/less/contextMenu.less
@@ -10,7 +10,7 @@
   color: black;
   cursor: default;
   display: flex;
-  font-size: 14px;
+  font-size: @contextMenuFontSize;
   &.contextMenuScrollable {
     overflow-y: scroll;
   }
@@ -68,7 +68,6 @@
     }
   }
   box-sizing: border-box;
-  max-width: 300px;
   display: flex;
   align-items: center;
   text-overflow: ellipsis;
@@ -139,9 +138,25 @@
       float: right;
       margin: auto 0 auto 5px;
     }
+    .accelerator {
+      .submenuIndicator;
+      font-size: @contextMenuFontSize;
+      margin-left: 10px;
+    }
   }
 
   .fa {
     font-size: @bookmarksFolderIconSize;
   }
+}
+
+
+// Make context menu style match menubar (Windows only- for use w/ slim titlebar)
+.platform--win32 .contextMenuItem {
+  font: menu;
+  font-size: 12px;
+}
+
+.platform--win32 .accelerator {
+  font: menu;
 }
